# cryptobotkit

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
cryptobotkit/: ccxt-test.py  cli.py  model.py
tests/: test_model.py
