[tool.poetry]
name = "cryptobotkit"
version = "0.1.0"
description = ""
authors = ["Owen Campbell <owen.campbell@tanti.org.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
attrs = ">=19.3"
ccxt = ">=1.24.70"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
isort = ">=4.3"
black = {version = ">=18.3-alpha.0", allow-prereleases = true}
bumpversion = ">=0.5.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
crypto = "cryptobotkit.cli:crypto"
